--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -52,5 +52,6 @@
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:padding="8dip"
-		android:text="request location update"/>
+		android:text="request location update"
+		android:background="@drawable/buttonblue"/>
 </LinearLayout>
