--- a/res/layout/cell_row.xml
+++ b/res/layout/cell_row.xml
@@ -6,11 +6,25 @@
 			xmlns:android="http://schemas.android.com/apk/res/android"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
+			android:textSize="16dip"
 			android:padding="8dip"/>
 	<TextView android:id="@+id/cell_row_LAC"
   			xmlns:android="http://schemas.android.com/apk/res/android"
   			android:layout_width="wrap_content"
   			android:layout_height="wrap_content"
+			android:textSize="16dip"
+			android:padding="8dip"/>
+	<TextView android:id="@+id/cell_row_MNC"
+  			xmlns:android="http://schemas.android.com/apk/res/android"
+  			android:layout_width="wrap_content"
+  			android:layout_height="wrap_content"
+			android:textSize="16dip"
+			android:padding="8dip"/>
+	<TextView android:id="@+id/cell_row_MCC"
+  			xmlns:android="http://schemas.android.com/apk/res/android"
+  			android:layout_width="wrap_content"
+  			android:layout_height="wrap_content"
+			android:textSize="16dip"
 			android:padding="8dip"/>
 </LinearLayout>
 
