--- a/res/layout/networks_list.xml
+++ b/res/layout/networks_list.xml
@@ -9,5 +9,6 @@
 		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
 		android:padding="8dip"
+		android:textSize="16dip"
   		android:text="@string/no_networks"/>
 </LinearLayout>
