--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -10,70 +10,70 @@
 			<TextView android:textStyle="bold"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:padding="8dip"
-				android:textSize="16dip"
+				android:padding="4dip"
+				android:textSize="12dip"
 				android:text="@string/label_currentCID"/>
 			<TextView android:id="@+id/field_currentCID"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:padding="8dip"
-				android:textSize="16dip"
+				android:padding="4dip"
+				android:textSize="12dip"
 				android:text=""/>
 	    </TableRow>
 		<TableRow>
 			<TextView android:textStyle="bold"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:padding="8dip"
-				android:textSize="16dip"
+				android:padding="4dip"
+				android:textSize="12dip"
 				android:text="@string/label_currentLAC"/>
 			<TextView android:id="@+id/field_currentLAC"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:padding="8dip"
-				android:textSize="16dip"
+				android:padding="4dip"
+				android:textSize="12dip"
 				android:text=""/>
 	    </TableRow>
 		<TableRow>
 			<TextView android:textStyle="bold"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:padding="8dip"
-				android:textSize="16dip"
+				android:padding="4dip"
+				android:textSize="12dip"
 				android:text="@string/label_currentMNC"/>
 			<TextView android:id="@+id/field_currentMNC"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:padding="8dip"
-				android:textSize="16dip"
+				android:padding="4dip"
+				android:textSize="12dip"
 				android:text=""/>
 	    </TableRow>
 		<TableRow>
 			<TextView android:textStyle="bold"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:padding="8dip"
-				android:textSize="16dip"
+				android:padding="4dip"
+				android:textSize="12dip"
 				android:text="@string/label_currentMCC"/>
 			<TextView android:id="@+id/field_currentMCC"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:padding="8dip"
-				android:textSize="16dip"
+				android:padding="4dip"
+				android:textSize="12dip"
 				android:text=""/>
 	    </TableRow>
 		<TableRow>
 			<TextView android:textStyle="bold"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:padding="8dip"
-				android:textSize="16dip"
+				android:padding="4dip"
+				android:textSize="12dip"
 				android:text="@string/label_currentSSID"/>
 			<TextView android:id="@+id/field_currentSSID"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:padding="8dip"
-				android:textSize="16dip"
+				android:padding="4dip"
+				android:textSize="12dip"
 				android:text=""/>
 	    </TableRow>
 	</TableLayout>
@@ -81,12 +81,18 @@
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:background="@drawable/buttonblue"
-		android:textSize="16dip"
-		android:text="turn wifi on"/>
+		android:textSize="12dip"
+		android:text=""/>
+	<Button android:id="@+id/button_wapdroidState"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:background="@drawable/buttongreen"
+		android:textSize="12dip"
+		android:text=""/>
 	<Button android:id="@+id/button_cellLocation"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:background="@drawable/buttonblue"
-		android:textSize="16dip"
+		android:textSize="12dip"
 		android:text="request location update"/>
 </LinearLayout>
