--- a/res/layout/cell_row.xml
+++ b/res/layout/cell_row.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 		android:layout_width="fill_parent"
-		android:layout_height="wrap_content">
+		android:layout_height="wrap_content"
+		android:padding="8dip">
 	<TextView android:id="@+id/cell_row_CID"
 			xmlns:android="http://schemas.android.com/apk/res/android"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:textSize="16dip"
-			android:padding="8dip"/>
+			android:paddingRight="8dip"
+			android:textSize="16dip"/>
 	<TextView android:id="@+id/cell_row_LAC"
   			xmlns:android="http://schemas.android.com/apk/res/android"
   			android:layout_width="wrap_content"
   			android:layout_height="wrap_content"
-			android:textSize="16dip"
-			android:padding="8dip"/>
+			android:paddingRight="8dip"
+			android:textSize="16dip"/>
 	<TextView android:id="@+id/cell_row_MNC"
   			xmlns:android="http://schemas.android.com/apk/res/android"
   			android:layout_width="wrap_content"
   			android:layout_height="wrap_content"
-			android:textSize="16dip"
-			android:padding="8dip"/>
+			android:paddingRight="8dip"
+			android:textSize="16dip"/>
 	<TextView android:id="@+id/cell_row_MCC"
   			xmlns:android="http://schemas.android.com/apk/res/android"
   			android:layout_width="wrap_content"
   			android:layout_height="wrap_content"
-			android:textSize="16dip"
-			android:padding="8dip"/>
+			android:paddingRight="8dip"
+			android:textSize="16dip"/>
 </LinearLayout>
 
