--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,98 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
-	android:orientation="vertical">
-	<TableLayout android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:stretchColumns="1">
-		<TableRow>
-			<TextView android:textStyle="bold"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:padding="4dip"
-				android:textSize="12dip"
-				android:text="@string/label_currentCID"/>
-			<TextView android:id="@+id/field_currentCID"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:padding="4dip"
-				android:textSize="12dip"
-				android:text=""/>
-	    </TableRow>
-		<TableRow>
-			<TextView android:textStyle="bold"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:padding="4dip"
-				android:textSize="12dip"
-				android:text="@string/label_currentLAC"/>
-			<TextView android:id="@+id/field_currentLAC"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:padding="4dip"
-				android:textSize="12dip"
-				android:text=""/>
-	    </TableRow>
-		<TableRow>
-			<TextView android:textStyle="bold"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:padding="4dip"
-				android:textSize="12dip"
-				android:text="@string/label_currentMNC"/>
-			<TextView android:id="@+id/field_currentMNC"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:padding="4dip"
-				android:textSize="12dip"
-				android:text=""/>
-	    </TableRow>
-		<TableRow>
-			<TextView android:textStyle="bold"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:padding="4dip"
-				android:textSize="12dip"
-				android:text="@string/label_currentMCC"/>
-			<TextView android:id="@+id/field_currentMCC"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:padding="4dip"
-				android:textSize="12dip"
-				android:text=""/>
-	    </TableRow>
-		<TableRow>
-			<TextView android:textStyle="bold"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:padding="4dip"
-				android:textSize="12dip"
-				android:text="@string/label_currentSSID"/>
-			<TextView android:id="@+id/field_currentSSID"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:padding="4dip"
-				android:textSize="12dip"
-				android:text=""/>
-	    </TableRow>
-	</TableLayout>
-	<Button android:id="@+id/button_wifiState"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:background="@drawable/buttonblue"
-		android:textSize="12dip"
-		android:text=""/>
-	<Button android:id="@+id/button_wapdroidState"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:background="@drawable/buttongreen"
-		android:textSize="12dip"
-		android:text=""/>
-	<Button android:id="@+id/button_cellLocation"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:background="@drawable/buttonblue"
-		android:textSize="12dip"
-		android:text="request location update"/>
-</LinearLayout>
+	android:stretchColumns="1">
+	<TableRow android:padding="4dip">
+		<TextView android:textStyle="bold"
+			android:paddingRight="8dip"
+			android:textSize="16dip"
+			android:text="@string/label_currentCID"/>
+		<TextView android:id="@+id/field_currentCID"
+			android:textSize="16dip"
+			android:text=""/>
+    </TableRow>
+	<TableRow android:padding="4dip">
+		<TextView android:textStyle="bold"
+			android:paddingRight="8dip"
+			android:textSize="16dip"
+			android:text="@string/label_currentLAC"/>
+		<TextView android:id="@+id/field_currentLAC"
+			android:textSize="16dip"
+			android:text=""/>
+    </TableRow>
+	<TableRow android:padding="4dip">
+		<TextView android:textStyle="bold"
+			android:paddingRight="8dip"
+			android:textSize="16dip"
+			android:text="@string/label_currentMNC"/>
+		<TextView android:id="@+id/field_currentMNC"
+			android:textSize="16dip"
+			android:text=""/>
+    </TableRow>
+	<TableRow android:padding="4dip">
+		<TextView android:textStyle="bold"
+			android:paddingRight="8dip"
+			android:textSize="16dip"
+			android:text="@string/label_currentMCC"/>
+		<TextView android:id="@+id/field_currentMCC"
+			android:textSize="16dip"
+			android:text=""/>
+    </TableRow>
+	<TableRow android:padding="4dip">
+		<TableLayout android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:paddingRight="8dip"
+			android:stretchColumns="1">
+			<TableRow>
+				<TextView android:textStyle="bold"
+					android:textSize="16dip"
+					android:text="@string/label_WIFI"/>
+			</TableRow>
+			<TableRow>
+				<TextView android:id="@+id/field_wifiState"
+					android:textSize="12dip"/>
+			</TableRow>
+		</TableLayout>
+		<CheckBox android:id="@+id/checkbox_wifiState"/>
+    </TableRow>
+	<TableRow android:padding="4dip">
+		<TextView android:textStyle="bold"
+			android:paddingRight="8dip"
+			android:textSize="16dip"
+			android:text="@string/label_wapdroidState"/>
+		<CheckBox android:id="@+id/checkbox_wapdroidState"/>
+	</TableRow>
+</TableLayout>
