--- a/res/layout/network_row.xml
+++ b/res/layout/network_row.xml
@@ -1,7 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/network_row_SSID"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
-	android:textSize="16dip"
-	android:padding="8dip"/>
+	android:stretchColumns="0">
+	<TableRow>
+		<TextView android:textStyle="bold"
+			android:id="@+id/network_row_SSID"
+			android:textColor="@color/green"
+			android:textSize="18dip"
+			android:paddingTop="8dip"
+			android:paddingBottom="2dip"
+			android:paddingLeft="12dip"/>
+    </TableRow>
+	<TableRow>
+		<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:stretchColumns="0">
+			<TableRow>
+				<TextView android:paddingTop="2dip"
+					android:paddingBottom="8dip"
+					android:paddingLeft="12dip"
+					android:textSize="14dip"
+					android:text="@string/label_BSSID"/>
+				<TextView android:id="@+id/network_row_BSSID"
+					android:textColor="@color/green"
+					android:paddingTop="2dip"
+					android:paddingRight="12dip"
+					android:paddingBottom="8dip"
+					android:gravity="right"
+					android:textSize="14dip"/>
+  		  	</TableRow>
+		</TableLayout>
+    </TableRow>
+</TableLayout>
