--- a/res/layout/cell_row.xml
+++ b/res/layout/cell_row.xml
@@ -5,6 +5,7 @@
 	android:stretchColumns="0">
 	<TableRow>
 		<TextView android:textStyle="bold"
+			android:textColor="@color/green"
 			android:paddingTop="8dip"
 			android:paddingBottom="2dip"
 			android:paddingLeft="12dip"
